Development commit